[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/munro.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/GUI elements/class_picker/ClassPicker.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/big_munro.tres" type="DynamicFont" id=3]

[node name="ClassPicker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1000.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 800.0
margin_top = 500.0
margin_right = 1000.0
margin_bottom = 600.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Let's go!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Panel"]
margin_right = 1000.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/icon_margin = 100
icon_scale = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="item_selected" from="Panel/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="Panel/ItemList" to="." method="_on_ItemList_nothing_selected"]
